# aiochatgpt

./: Dockerfile  README.md  config.yml  docker-compose.yml  pyproject.toml
aiochatgpt/: main.py
aiochatgpt/apps/bot/callback_data/: base_callback.py  dialog.py
aiochatgpt/apps/bot/commands/: bot_commands.py
aiochatgpt/apps/bot/handlers/common/: __init__.py  base.py  group.py
aiochatgpt/apps/bot/handlers/common/chatgpt/: __init__.py  base.py
aiochatgpt/apps/bot/handlers/common/chatgpt/modes/: __init__.py  base.py  custom.py  dialog.py
aiochatgpt/apps/bot/keyboards/common/: chat_gpt_kbs.py  common_kbs.py
aiochatgpt/apps/bot/middlewares/: l10n.py  user.py
aiochatgpt/apps/chatgpt/: manager.py  model.py
aiochatgpt/config/: config.py  log.py
aiochatgpt/config/db/: postgresdb.py  sqlitedb.py
aiochatgpt/db/models/: __init__.py
aiochatgpt/db/models/base/: declarative.py
aiochatgpt/db/models/dialog/: __init__.py  chat_mode.py  dialog.py
aiochatgpt/db/models/user/: user.py
aiochatgpt/init/: __init__.py  chat_gpt.py  db.py
aiochatgpt/locales/ru/: common.ftl
aiochatgpt/locales/stubs/ru/: stub.pyi
scripts/: run.sh
